--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11",
     "framer-motion": "^6",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.4",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
